// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should not render component with empty publication 1`] = `""`;

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data="Article (original research)"
        heading="Sub-type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A3825&searchMode=advanced"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A218311&searchMode=advanced"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A171723&searchMode=advanced"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A3825&searchMode=advanced"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A218311&searchMode=advanced"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D=UQ%3A171723&searchMode=advanced"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;
